# TweetTrends

./: LICENSE  README.md
backend/: README.md  pyproject.toml  requirements.txt  social_media_data.db
backend/data/raw/1126068392308297729/: 1708798015326426000_Following.json  1708798016570733000_Following.json  1708798017805104000_Following.json  1708798019092729000_Following.json  1708798019862072000_Following.json  1708798020570160000_Following.json  1708798021271143000_Following.json  1708798022138119000_Following.json  1708798022916313000_Following.json  1708798023662399000_Following.json  1708798024286375000_Following.json  1708798025058394000_Following.json  1708798025753635000_Following.json  1708798026354058000_Following.json  1708798027054150000_Following.json  1708798027780695000_Following.json  1708798028491007000_Following.json  1708798029292766000_Following.json  1708798029940564000_Following.json  1708798030699191000_Following.json  1708798031297077000_Following.json
backend/data/raw/1132563136186183680/: 1708798015324342000_Following.json  1708798016580149000_Following.json  1708798017795050000_Following.json  1708798019084327000_Following.json  1708798019804769000_Following.json  1708798020503654000_Following.json  1708798021244912000_Following.json  1708798021941440000_Following.json  1708798022631509000_Following.json  1708798023374203000_Following.json  1708798024094511000_Following.json  (+1 more)
backend/docs/: logic.md
backend/src/scrapper/: data_formatter.py  demo.json  scrapper.py
backend/src/xtrending/: main.py  tag.py  tokens.py  utils.py
(+158 files in other folders)
